Bug 1398030 Part1: Add debug info when EventSource set http request header failed. r=baku.

MozReview-Commit-ID: KLIvkazd8lP